--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.16.4",
+    "axios": "^1.13.4",
     "bootstrap-icons": "^1.13.1",
     "quasar": "^2.16.0",
     "vue": "^3.5.22",
